# sfdynamics

./: .gitignore  LICENSE  README.rst  fluid.py  interpolation.py  main.py  pyproject.toml  requirements.txt  sfdynamics.py
sfdynamics/: __init__.py  fluid.py  interpolation.py  sampler.py
