[project]
name = "sfdyanmics"
version = "0.1.2"
description = "A Stable Fluids implementation in Python using Numpy"
readme = "README.rst"
requires-python = ">=3.7"
license = {file = "LICENSE"}

dependencies = [
    "matplotlib~=3.6.2",
    "numpy~=1.24.0",
    "Pillow~=9.3.0",
]

[project.optional-dependencies]
runner = [
    "scipy~=1.9.3",
    "imageio~=2.23.0",
]

[tool.black]
line-length = 120
target_version = ['py37']
exclude = "main.py"
